more spacing fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,15 +57,14 @@ h1 {
     color: #305891;
 }
 .items-collection label .itemcontent{
-    width:100%;
+    width: 68px;
+
 }
 .items-collection .btn-group{
     width:90%
 }
 
-.form-group {
-  width: 109.6px;
-}
+
 
 span.hidden {
     display: none !important;
